--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "17.0.1",
-    "react-native": "0.64.1"
+    "react-native": "0.64.1",
+    "react-native-camera": "^3.43.9"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
